Harden in-memory password handling
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>